--- a/src/app/components/blog/articleHeader.module.css
+++ b/src/app/components/blog/articleHeader.module.css
@@ -22,11 +22,12 @@
 	width: 100%;
 	height: 400px;
 	border-radius: 10px;
+	overflow: hidden;
 }
 
 .coverImage {
-	object-fit: cover;
-	/* 	object-fit: contain; */
+	width: 100%;
+	object-fit: contain;
 }
 
 @media only screen and (max-width: 1100px) {
@@ -48,5 +49,10 @@
 
 	.coverImage {
 		height: 200px;
+	}
+
+	.coverImageContainer {
+		height: auto;
+		aspect-ratio: 75/45;
 	}
 }
