--- a/src/app/components/home/partners.module.css
+++ b/src/app/components/home/partners.module.css
@@ -6,14 +6,15 @@
 	padding: 2rem 0;
 
 	width: 100%;
-	max-width: 1000px;
+	max-width: 1200px;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: space-between;
 	justify-content: center;
 	align-items: center;
-	gap: 30px;
+	gap: 64px;
+	row-gap: 30px;
 }
 
 .logo {
